# Chess_CPP

./: .clangformat  .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt
docs/: chess_schematic.drawio
modules/board/: CMakeLists.txt
modules/board/include/: board.hpp  board_types.hpp  piece.hpp  space.hpp
modules/board/src/: board.cpp  piece.cpp  space.cpp
modules/chess/: CMakeLists.txt
modules/chess/include/: chess.hpp
modules/chess/src/: chess.cpp
modules/display/: CMakeLists.txt
modules/display/bindings/: CMakeLists.txt
modules/display/include/: display.hpp  imgui_initalizer.hpp
modules/display/src/: display.cpp  imgui_initalizer.cpp
modules/game/: CMakeLists.txt
modules/imgui_initializer/: CMakeLists.txt
modules/imgui_initializer/include/: imgui_initializer.hpp
modules/imgui_initializer/src/: imgui_initializer.cpp
samples/board_construct/: CMakeLists.txt
samples/board_construct/src/: main.cpp
samples/board_sample/: CMakeLists.txt
samples/gui_sample/: CMakeLists.txt
samples/gui_sample/src/: main.cpp
